--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,18 @@
 // For format details, see https://aka.ms/vscode-remote/devcontainer.json or this file's README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.112.0/containers/r
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.134.1/containers/r
 {
-	"name": "R_vscode",
-	"dockerFile": "Dockerfile",
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
-
-	// Set environment variables for container
-	"containerEnv": {
-		"RENV_PATHS_CACHE_HOST": "/opt/local/renv/cache",
-		"RENV_PATHS_CACHE_CONTAINER": "/renv/cache",
-		"RENV_PATHS_CACHE": "/renv/cache"
+	"name": "R",
+	"build": {
+		"dockerfile": "Dockerfile",
 	},
+	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
+	
+	// Set environment variables for container
+	//"containerEnv": {
+	//	"RENV_PATHS_CACHE_HOST": "/opt/local/renv/cache",
+	//	"RENV_PATHS_CACHE_CONTAINER": "/renv/cache",
+	//	"RENV_PATHS_CACHE": "/renv/cache"
+	//},
 
 	// Add more local mounts to container
 	"mounts": [
@@ -23,17 +25,21 @@
 		"r.alwaysUseActiveTerminal": true,
   		"r.bracketedPaste": true,
 		"r.sessionWatcher": true,
-		"r.rterm.linux": "/usr/local/bin/radian"  
+		"r.rterm.linux": "/usr/local/bin/radian",
+		"r.rterm.option": [
+			""
+		],
+		"r.autoDetect": "false",
+		"r.terminalPath": "/usr/local/bin/radian",
+		"r.interpreterPath": "/usr/local/bin/R"
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"ikuyadeu.r",
-		"mikhail-arkhipov.r",
+		//"mikhail-arkhipov.r",
 		"REditorSupport.r-lsp",
 		"GrapeCity.gc-excelviewer"
-		
-		
 	]
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -43,5 +49,5 @@
 	// "postCreateCommand": "R --version",
 
 	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode"
+	// "remoteUser": "docker"
 }
