--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
-		"terminal.integrated.shell.linux": "/bin/bash",
+		//"terminal.integrated.shell.linux": "/bin/bash",
+		"terminal.integrated.shell.linux": "/usr/bin/fish",
 		"r.alwaysUseActiveTerminal": true,
   		"r.bracketedPaste": true,
 		"r.sessionWatcher": true,
