--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,6 @@
 version: '3.4'
 
 services:
-  rstudioserver:
-    image: rocker/rstudio:3.6.3
-    container_name: rstudioserver
-    volumes:
-      - /home/eric/r_dev_projects:/r_dev_projects
-      - /opt/local/renv/cache:/renv/cache
-    ports:
-      - 8787:8787
-    environment:
-      - RENV_PATHS_CACHE_HOST=${RENV_PATHS_CACHE_HOST}
-      - RENV_PATHS_CACHE_CONTAINER=${RENV_PATHS_CACHE_CONTAINER}
-      - RENV_PATHS_CACHE=${RENV_PATHS_CACHE}
-      - USER=${USER}
-      - USERID=${USERID}
-      - GROUPID=${GROUPID}
-      - PASSWORD=${PASSWORD}
   rstudiopreview:
     build:
       context: ./rstudio_docker
@@ -28,12 +12,15 @@ services:
       - /home/eric/r_dev_projects/rstudio_config_dir:/home/eric/.config/rstudio
     ports:
       - 8686:8787
-    environment:
-      - RENV_PATHS_CACHE_HOST=${RENV_PATHS_CACHE_HOST}
-      - RENV_PATHS_CACHE_CONTAINER=${RENV_PATHS_CACHE_CONTAINER}
-      - RENV_PATHS_CACHE=${RENV_PATHS_CACHE}
-      - USER=${USER}
-      - USERID=${USERID}
-      - GROUPID=${GROUPID}
-      - PASSWORD=${PASSWORD}
-
+    env_file: ./rstudio_docker/rstudio.env
+  rstudiotest:
+    image: rocker/rstudio:4.0.2
+    container_name: rstudiotest
+    volumes:
+      - /home/eric/r_dev_projects:/home/eric/r_dev_projects
+      - /home/eric/.ssh:/home/eric/.ssh
+      - /opt/local/renv/cache:/renv/cache
+      - /home/eric/r_dev_projects/rstudio_config_dir:/home/eric/.config/rstudio
+    ports:
+      - 8585:8787
+    env_file: ./rstudio_docker/rstudio.env
