update cache path

--- a/rstudio_docker/.env
+++ b/rstudio_docker/.env
@@ -1,4 +1,4 @@
-RENV_PATHS_CACHE_HOST="/opt/local/renv/cache"
+RENV_PATHS_CACHE_HOST="/opt/local/renv/cache_rstudio"
 RENV_PATHS_CACHE_CONTAINER="/renv/cache"
 RENV_PATHS_CACHE="/renv/cache"
 USER="eric"
