--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - /home/eric/.ssh:/home/eric/.ssh
       - /opt/local/renv/cache:/renv/cache
       - /home/eric/r_dev_projects/rstudio_config_dir:/home/eric/.config/rstudio
+    restart:
+      always
     ports:
       - 8686:8787
     env_file: ./rstudio_docker/rstudio.env
