--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - /opt/local/renv/cache:/renv/cache
       - /home/eric/r_dev_projects/rstudio_config_dir:/home/eric/.config/rstudio
     restart:
-      always
+      unless-stopped
     ports:
       - 8686:8787
     env_file: ./rstudio_docker/rstudio.env
