--- a/rstudio_docker/Dockerfile
+++ b/rstudio_docker/Dockerfile
@@ -36,6 +36,11 @@ RUN pip3 install radian
 
 RUN echo "RENV_PATHS_CACHE=/renv/cache" >> /usr/local/lib/R/etc/Renviron
 
+# [Optional] Uncomment this section to add addtional system dependencies needed for project
+# RUN apt-get update \
+#     && export DEBIAN_FRONTEND=noninteractive \
+#     && apt-get -y install --no-install-recommends ---packages list----
+
 EXPOSE 8787
 
 CMD ["/init"]
