--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   rstudiopreview:
     build:
       context: ./rstudio_docker
-    container_name: rstudiopreview
+    container_name: ${CONTAINER_NAME}
     volumes:
       - ${VOLUME_PATH}:${VOLUME_PATH}
       - /home/${USER}/.ssh:/home/${USER}/.ssh
@@ -13,6 +13,6 @@ services:
     restart:
       unless-stopped
     ports:
-      - 8686:8787
+      - ${LOCAL_PORT}:8787
     env_file: .env
 
