add draw.io and liveshare plugins for vscode setup

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,6 +37,8 @@
 		"REditorSupport.r-lsp",
 		"GrapeCity.gc-excelviewer",
 		"Mohamed-El-Fodil-Ihaddaden.shinysnip",
+		"hediet.vscode-drawio",
+		"MS-vsliveshare.vsliveshare-pack",
 		"RDebugger.r-debugger"
 	]
 
