add python extension to vscode setup

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,6 +39,7 @@
 		"Mohamed-El-Fodil-Ihaddaden.shinysnip",
 		"hediet.vscode-drawio",
 		"MS-vsliveshare.vsliveshare-pack",
+		"ms-python.python",
 		"RDebugger.r-debugger"
 	]
 
