--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,8 +4,11 @@
 	"name": "R",
 	"build": {
 		"dockerfile": "Dockerfile",
+		"args": {
+			"USERNAME": "${localEnv:USER}"
+		}
 	},
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
+	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined", "--env-file", ".devcontainer/.env" ],
 
 	// Add more local mounts to container
 	"mounts": [
@@ -13,7 +16,7 @@
 	],
 
 	// Set *default* container specific settings.json values on container create.
-	"settings": { 
+	"settings": {
 		//"terminal.integrated.shell.linux": "/bin/bash",
 		"terminal.integrated.shell.linux": "/usr/bin/fish",
 		"r.alwaysUseActiveTerminal": true,
