add paste-indent extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,6 +38,7 @@
 		//"/renv/cache/r-latest.vslx",
 		//"mikhail-arkhipov.r",
 		//"REditorSupport.r-lsp",
+		"Rubymaniac.vscode-paste-and-indent",
 		"GrapeCity.gc-excelviewer",
 		"Mohamed-El-Fodil-Ihaddaden.shinysnip",
 		"hediet.vscode-drawio",
