add more extensions from Kun Ren's presentation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,10 +36,15 @@
 	"extensions": [
 		"ikuyadeu.r",
 		//"/renv/cache/r-latest.vslx",
-		//"mikhail-arkhipov.r",
-		//"REditorSupport.r-lsp",
+		"ionutvmi.path-autocomplete",
+		"usernamehw.errorlens",
+		"mhutchie.git-graph",
+		"wayou.vscode-todo-highlight",
+		"tomoki1207.pdf",
+		"DavidAnson.vscode-markdownlint",
 		"Rubymaniac.vscode-paste-and-indent",
 		"GrapeCity.gc-excelviewer",
+		"IBM.output-colorizer",
 		"Mohamed-El-Fodil-Ihaddaden.shinysnip",
 		"hediet.vscode-drawio",
 		"MS-vsliveshare.vsliveshare-pack",
