--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,7 +35,7 @@
 		"r.interpreterPath": "/usr/local/bin/R",
 		"r.debugger.timeouts.startup": 8000,
 		"editor.wordWrap": "on",
-		"editor.tabSpaces": "2"
+		"editor.tabSize": 2
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
