--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
 		"source=/opt/local/renv/cache,target=/renv/cache,type=bind,consistency=cached",
 		"source=/etc/alsa,target=/etc/alsa,type=bind,consistency=cached",
 		"source=/usr/share/alsa,target=/usr/share/alsa,type=bind,consistency=cached",
-		"source=/run/user/1000/pulse/native,target=/run/user/1000/pulse/native,type=bind,consistency=cached"
+		"source=/run/user/1000/pulse/native,target=/run/user/1000/pulse/native,type=bind,consistency=cached",
+		"source=/media/media_drive1/obs_files/audio_assets/soundboard_files,target=/soundboard_files,type=bind,consistency=cached"
 	],
 	
 	"containerEnv": {
