--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - /home/${USER}/.ssh:/home/${USER}/.ssh
       - ${RENV_PATHS_CACHE_HOST}:${RENV_PATHS_CACHE_CONTAINER}
       - ${VOLUME_PATH}/.devcontainer/rstudio_config_dir:/home/${USER}/.config/rstudio
+      - /media/media_drive1/obs_files/audio_assets/soundboard_files:/soundboard_files
     restart:
       unless-stopped
     ports:
