--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,9 +11,20 @@
 	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined", "--env-file", ".devcontainer/.env" ],
 
 	// Add more local mounts to container
+	// The first mounts are for a local pulseaudio server on linux
+	// You can leave these commented out or delete if you are not linking the contianer to a linux sound system
 	"mounts": [
+		//"source=/etc/alsa,target=/etc/alsa,type=bind,consistency=cached",
+		//"source=/usr/share/alsa,target=/usr/share/alsa,type=bind,consistency=cached",
+		//"source=/run/user/1000/pulse/native,target=/run/user/1000/pulse/native,type=bind,consistency=cached",
+		//"source=/media/media_drive1/obs_files/audio_assets/soundboard_files,target=/soundboard_files,type=bind,consistency=cached",
 		"source=/opt/local/renv/cache,target=/renv/cache,type=bind,consistency=cached"
 	],
+	// Configure environment variables for audio sound server if needed
+	// You can leave these commented out or delete if you are not linking the contianer to a linux sound system
+	//"containerEnv": {
+	//	"PULSE_SERVER": "unix:/run/user/1000/pulse/native"
+	//},
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
