update vscode and rstudio docker containers for quarto

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,6 +10,7 @@ ARG INSTALL_ZSH="false"
 ARG INSTALL_FISH="true"
 ARG UPGRADE_PACKAGES="true"
 ARG USERNAME
+ARG QUARTO_VERSION
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
@@ -58,7 +59,7 @@ COPY library-scripts/.Rprofile-vscode /renv/.Rprofile-vscode
 
 # [Optional] Uncomment this section to add Quarto to the container
 # customize version number as appropriate
-RUN curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v0.9.172/quarto-0.9.172-linux-amd64.deb -o /tmp/quarto.deb
+RUN curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v0.9.201/quarto-0.9.201-linux-amd64.deb -o /tmp/quarto.deb
 RUN apt-get -y install ./tmp/quarto.deb
 
 # [Optional] Uncomment this section to add Hugo to the container
