--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -7,5 +7,6 @@ USERID=1000
 GROUPID=1000
 PASSWORD=1rstudio
 VOLUME_PATH=/home/eric/r_dev_projects
-LOCAL_PORT=8686
-CONTAINER_NAME=rstudiopreview
+LOCAL_PORT=2009
+CONTAINER_NAME=rstudioquarto
+QUARTO_VERSION=0.9.201
