--- a/.devcontainer/vscode_docker/Dockerfile
+++ b/.devcontainer/vscode_docker/Dockerfile
@@ -39,7 +39,7 @@ RUN apt-get update \
 RUN echo "RENV_PATHS_CACHE=/renv/cache" >> /usr/local/lib/R/etc/Renviron
 
 # copy the modified .Rprofile template to the renv cache
-#COPY library-scripts/.Rprofile-vscode /renv/.Rprofile-vscode
+COPY library-scripts/.Rprofile-vscode /renv/.Rprofile-vscode
 
 # [Optional] Uncomment this section to add Quarto to the container
 RUN /rocker_scripts/install_quarto.sh
