update env file

--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,4 +1,7 @@
 
+INSTALL_ZSH=false
+INSTALL_FISH=true
+UPGRADE_PACKAGES=true
 RENV_PATHS_CACHE_HOST=/opt/local/renv/cache
 RENV_PATHS_CACHE_CONTAINER=/renv/cache
 RENV_PATHS_CACHE=/renv/cache
@@ -9,4 +12,7 @@ PASSWORD=1rstudio
 VOLUME_PATH=/home/eric/r_dev_projects
 LOCAL_PORT=2009
 CONTAINER_NAME=rstudioquarto
-QUARTO_VERSION=0.9.201
+QUARTO_VERSION=latest
+RSTUDIO_VERSION=2022.02.1-461
+S6_VERSION=v1.21.7.0
+COMPOSE_PROJECT_NAME=rdevprojects
