--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,38 +2,38 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.134.1/containers/r
 {
 	"name": "R",
-	//"dockerComposeFile": "docker-compose.yml",
-	//"workspaceFolder": "/workspace",
-	//"service": "vscode",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"args": {
-			"USERNAME": "${localEnv:USER}",
-			"QUARTO_VERSION": "${localEnv:QUARTO_VERSION}"
-		}
-	},
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined", "--env-file", ".devcontainer/.env" ],
+	"dockerComposeFile": "docker-compose.yml",
+	"workspaceFolder": "/workspace",
+	"service": "vscode",
+	//"build": {
+	//	"dockerfile": "Dockerfile",
+	//	"args": {
+	//		"USERNAME": "${localEnv:USER}",
+	//		"QUARTO_VERSION": "${localEnv:QUARTO_VERSION}"
+	//	}
+	//},
+	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined", "--env-file", ".devcontainer/.env" ],
 
 	// Add more local mounts to container
 	// The first mounts are for a local pulseaudio server on linux
 	// You can leave these commented out or delete if you are not linking the contianer to a linux sound system
-	"mounts": [
+	// "mounts": [
 		//"source=/etc/alsa,target=/etc/alsa,type=bind,consistency=cached",
 		//"source=/usr/share/alsa,target=/usr/share/alsa,type=bind,consistency=cached",
 		//"source=/run/user/1000/pulse/native,target=/run/user/1000/pulse/native,type=bind,consistency=cached",
 		//"source=/media/media_drive1/obs_files/audio_assets/soundboard_files,target=/soundboard_files,type=bind,consistency=cached",
-		"source=/opt/local/renv/cache,target=/renv/cache,type=bind,consistency=cached"
-	],
+	//	"source=/opt/local/renv/cache,target=/renv/cache,type=bind,consistency=cached"
+	// ],
 	"features": {
-		"common": {
-			"username": "${localEnv:USER}",
-			"uid": "1000",
-			"gid": "1000",
-			"installZsh": false,
-			"installOhMyZsh": false,
-			"upgradePackages": true,
-			"nonFreePackages": true
-		},
+		//"common": {
+		//	"username": "${localEnv:USER}",
+		//	"uid": "1000",
+		//	"gid": "1000",
+		//	"installZsh": false,
+		//	"installOhMyZsh": false,
+		//	"upgradePackages": true,
+		//	"nonFreePackages": true
+		//},
 		"fish": "latest"
 	},
 	// Configure environment variables for audio sound server if needed
