tweaks to docker containers

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,19 +15,17 @@ ARG INSTALL_OHMYZSH="false"
 ARG INSTALL_NONFREE="false"
 ARG QUARTO_VERSION=latest
 
-# [Optional] Uncomment this section to install additional OS packages.
 # key dependencies for certain R packages
 RUN apt-get update \
     && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends software-properties-common wget libssl-dev libxml2-dev libcurl4-openssl-dev python3-pip pandoc libzip-dev \
-    && apt-get -y install --no-install-recommends libfreetype6-dev libfontconfig1-dev tk \
+    && apt-get -y install --no-install-recommends software-properties-common curl wget libssl-dev libxml2-dev libsodium-dev imagemagick libmagick++-dev libgit2-dev libssh2-1-dev zlib1g-dev librsvg2-dev libudunits2-dev libcurl4-openssl-dev python3-pip pandoc libzip-dev libfreetype6-dev libfontconfig1-dev tk libpq5 libxt6 openssh-client openssh-server \
     && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
 COPY library-scripts/common-debian.sh /tmp/library-scripts/
 RUN apt-get update && bash /tmp/library-scripts/common-debian.sh ${INSTALL_ZSH} ${USERNAME} ${USER_UID} ${USER_GID} ${UPGRADE_PACKAGES} ${INSTALL_OHMYZSH} ${INSTALL_NONFREE}
 
 # install R packages needed for VSCode interaction and package management
-RUN install2.r languageserver renv remotes httpgd
+RUN install2.r --error --skipinstalled --ncpus -4 languageserver renv remotes httpgd
 
 # install radian via python and pip3
 RUN apt-get update \
