--- a/.devcontainer/rstudio_docker/Dockerfile
+++ b/.devcontainer/rstudio_docker/Dockerfile
@@ -15,9 +15,11 @@ ENV RSTUDIO_VERSION=$RSTUDIO_VERSION
 ENV PATH=/usr/lib/rstudio-server/bin:$PATH
 ENV QUARTO_VERSION=$QUARTO_VERSION
 
+# key dependencies for certain R packages
 RUN apt-get update \
     && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends libpq5 openssh-client openssh-server
+    && apt-get -y install --no-install-recommends software-properties-common curl wget libssl-dev libxml2-dev libsodium-dev imagemagick libmagick++-dev libgit2-dev libssh2-1-dev zlib1g-dev librsvg2-dev libudunits2-dev libcurl4-openssl-dev python3-pip pandoc libzip-dev libfreetype6-dev libfontconfig1-dev tk libpq5 libxt6 openssh-client openssh-server \
+    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
 RUN /rocker_scripts/install_rstudio.sh
 RUN /rocker_scripts/install_pandoc.sh
