--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,6 +29,7 @@
 		"r.terminalPath": "/usr/local/bin/radian",
 		"r.interpreterPath": "/usr/local/bin/R",
 		"r.debugger.timeouts.startup": 8000,
+		"r.lsp.enabled": false,
 		"editor.wordWrap": "on",
 		"editor.tabSize": 2,
 		"path-autocomplete.pathMappings": {
