--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 .RData
 .Ruserdata
 .DS_Store
+
+# container-specific files
+.devcontainer/.rstudio_config/*
+!.devcontainer/.rstudio_config/README.md
+.env
