--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,16 +1,2 @@
-INSTALL_ZSH=false
-INSTALL_FISH=true
-UPGRADE_PACKAGES=true
+DISABLE_AUTH=true
 RENV_PATHS_CACHE_HOST=/opt/local/renv/cache
-RENV_PATHS_CACHE_CONTAINER=/renv/cache
-RENV_PATHS_CACHE=/renv/cache
-USER=eric
-USERID=1000
-GROUPID=1000
-PASSWORD=1rstudio
-VOLUME_PATH=/home/eric/r_dev_projects
-LOCAL_PORT=2010
-QUARTO_VERSION=latest
-RSTUDIO_VERSION=2022.02.1-461
-S6_VERSION=v1.21.7.0
-COMPOSE_PROJECT_NAME=rdevprojects
